# stock-tracker-legacy-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  scripts.py
server/: main.py
server/api/: dependencies.py  routes.py
server/api/endpoints/: auth.py  stocks.py  transactions.py  users.py
server/crud/: crud_stocks.py  crud_transactions.py  crud_users.py
server/database/: collections.py  connection.py
server/models/: stock.py  transaction.py  user.py
server/repositories/users/: dto.py  main.py
server/security/: token.py
server/services/: yahoo_finance.py
server/settings/: __init__.py  access_token.py  allowed_hosts.py  database.py  external_services.py
tests/: conftest.py
tests/services/: base_test_case.py
tests/services/authentication/: conftest.py  test_authenticate_unregistered_user.py  test_authenticate_user.py  test_authenticate_with_wrong_password.py  test_register_taken_user_data.py  test_register_user.py
tests/services/authentication/schemas/: RegisterResponseSchema.py  TokenResponseSchema.py  __init__.py
tests/services/authentication/utils/: AuthTokenValidator.py  RegisterResponseParser.py  RegisterResponseValidator.py  TokenResponseParser.py  TokenResponseValidator.py  __init__.py
tests/services/stocks/: conftest.py  test_get_empty_stocks.py  test_get_stocks.py
tests/services/stocks/entities/: Stock.py  Transaction.py  __init__.py
tests/services/transactions/: conftest.py  test_create_invalid_transaction.py  test_create_new_transaction.py  test_get_all_transactions.py
tests/settings/: database.py
(+16 files in other folders)
